--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,6 +9,6 @@
     mc:Ignorable="d">
 
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <SwapChainPanel x:Name="SwapChainCanvas" Width="500" Height="500"></SwapChainPanel>
+        <SwapChainPanel x:Name="SwapChainCanvas" Width="500" Height="500" Loaded="SwapChainCanvas_Loaded"></SwapChainPanel>
     </StackPanel>
 </Window>
